--- a/Repuestos Lirola/index.html
+++ b/Repuestos Lirola/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
+    <!--Favicon-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
