--- a/Repuestos Lirola/index.html
+++ b/Repuestos Lirola/index.html
@@ -139,10 +139,18 @@
         </div>
         <div class="row">
             
-            <div class="col-12 margen-columna-central">
+            <div class="col-12 margen-columna-central centrar-texto">
                 <h3 class="centrar-texto">Instalaciones El Ejido</h3>
                 <p>Teléfono: 950480455 / 676 13 02 16</p>
                 <p>Email: repuestoslirola@gmail.com</p>
+                <h3 class="centrar-texto">Horario:</h3>
+                <p>Lunes - Viernes:</p>
+                <p>8:30 - 13:30</p>
+                <p>16:00 - 19:00</p>
+                <p>Sábado:</p>
+                <p>9:00 - 12:00</p>
+                <p>Domingo:</p>
+                <p class="red-text">Cerrado</p>
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.6634934517724!2d-2.8051063248829133!3d36.778639372253224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd70431fcc3aa0df%3A0x17040537891c7b8a!2sRepuestos%20Lirola!5e0!3m2!1ses!2ses!4v1698131621622!5m2!1ses!2ses"
