--- a/Repuestos Lirola/index2.html
+++ b/Repuestos Lirola/index2.html
@@ -172,13 +172,13 @@
               <a href="" class="me-4 iconos">
                 <i class="bi bi-envelope"></i>
               </a>
-              <a href="" class="me-4 iconos">
+              <a href="https://www.facebook.com/repuestoslirola" class="me-4 iconos">
                 <i class="bi bi-facebook"></i>
               </a>
-              <a href="" class="me-4 iconos">
+              <a href="https://www.instagram.com/repuestoslirolaoficial/" class="me-4 iconos">
                 <i class="bi bi-instagram"></i>
               </a>
-              <a href="" class="me-4 iconos">
+              <a href="https://api.whatsapp.com/send/?phone=34604421823&text&type=phone_number&app_absent=0" class="me-4 iconos">
                 <i class="bi bi-whatsapp"></i>
               </a>
             </div>
