--- a/Repuestos Lirola/index.html
+++ b/Repuestos Lirola/index.html
@@ -2,166 +2,246 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Repuestos Lirola</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <!--Favicon-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <!--import de normalize-->
+  <link rel="stylesheet" href="css/normalize.css">
+  <!--Import hoja de estilos-->    
+  <link rel="stylesheet" href="css/main.css">
+  <!--Favicon-->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
 
 
-    <div class="container-fluid">
+  <div class="container-fluid">
 
-        <div class="row">
+    <div class="row">
 
-            <div class="col">
+      <div class="col">
 
-                <!-- Inicio del menu -->
+        <!-- Inicio del menu -->
 
-                <nav class="navbar navbar-expand-md navbar-dark menu">
-                    <div class="container-fluid">
-                        <!-- icono -->
+        <nav class="navbar navbar-expand-md navbar-dark menu">
+          <div class="container-fluid">
+            <!-- icono -->
 
-                        <a class="navbar-brand" href="#">
-                            <img src="img/rl.png">
-                            <span class="text-white">Repuestos Lirola </span>
-                        </a>
+            <a class="navbar-brand" href="index.html">
+              <img src="img/rl.png">
+              <span class="text-white margen-derecho">Repuestos Lirola </span>
+            </a>
 
-                        <!-- boton del menu -->
+            <!-- boton del menu -->
 
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-                        <!-- elementos del menu  -->
+            <!-- elementos del menu  -->
 
-                        <div class="collapse navbar-collapse" id="menu">
-                            <ul class="navbar-nav me-auto">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Productos</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Quiénes somos</a>
-                                </li>
-                            </ul>
+            <div class="collapse navbar-collapse " id="menu">
+              <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="quienesomos.html">Quiénes somos</a>
+                </li>
+              </ul>
 
-                            <hr class="d-md-none text-white-50">
+              <hr class="d-md-none text-white-50">
 
-                            <!-- enlaces redes sociales -->
-
-                            <ul class="navbar-nav  flex-row flex-wrap text-light">
-                                <li class="nav-item col-6 col-md-auto p-3">
-                                    <a class="iconos" href="https://www.instagram.com/repuestoslirolaoficial/">
-                                        <i class="bi bi-instagram"></i>
-                                        <small class="d-md-none ms-2">Instagram</small>
-                                    </a>
-                                </li>
-                                <li class="nav-item col-6 col-md-auto p-3">
-                                    <a class="iconos"
-                                        href="https://api.whatsapp.com/send/?phone=34604421823&text&type=phone_number&app_absent=0">
-                                        <i class="bi bi-whatsapp"></i>
-                                        <small class="d-md-none ms-2">WhatsApp </small>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
-
-        <!-- Imagen portada -->
-
-        <div class="row">
-
-            <div class="col">
-
-                <img class="imgResponsive" src="img/imgPortada.png">
 
             </div>
-
-        </div>
-        <!-- Separador -->
-        <div class="row">
-            <div class="col">
-                <img class="separador" src="img/separador.png">
-            </div>
-        </div>
-        <div class="row">
-
-            <div class="col margen-columna-central">
-
-                <h2 class="altura-h2-columna">Venta de recambios y accesorios para el automóvil.</h2>
-                <p>Somos tienda especializada con varios años de experiencia en el sector, gestionamos más de
-                    900.000 referencias en artículos relacionados con la Automoción.</p>
-                <img src="img/imgcol1.png">
-
-            </div>
-
-            <div class="col margen-columna-central">
-
-                <h2 class="altura-h2-columna">1ª marcas, garantía en todos nuestros productos.</h2>
-                <p> En Repuestos Lirola trabajamos con las mejores y más importantes marcas del sector, lo que nos
-                    garantiza contar con calidad, disponibilidad y variedad</p>
-                <img src="img/imgcol2.png">
-
-            </div>
-            <div class="col margen-columna-central">
-                <h2 class="altura-h2-columna">Asesoramiento y atención personalizada.</h2>
-                <p> Calidad - Servicio - Compromiso
-                    nuestra razón de ser.
-                    Garantizar que todos nuestros clientes estén 100% satisfechos.</p>
-                <img src="img/imgcol3.png">
-            </div>
-
-        </div>
-        <!-- Separador -->
-        <div class="row">
-            <div class="col">
-                <img class="separador" src="img/separador.png">
-            </div>
-        </div>
-        <div class="row">
-            
-            <div class="col-12 margen-columna-central centrar-texto">
-                <h3 class="centrar-texto">Instalaciones El Ejido</h3>
-                <p>Teléfono: 950480455 / 676 13 02 16</p>
-                <p>Email: repuestoslirola@gmail.com</p>
-                <h3 class="centrar-texto">Horario:</h3>
-                <p>Lunes - Viernes:</p>
-                <p>8:30 - 13:30</p>
-                <p>16:00 - 19:00</p>
-                <p>Sábado:</p>
-                <p>9:00 - 12:00</p>
-                <p>Domingo:</p>
-                <p class="red-text">Cerrado</p>
-                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.6634934517724!2d-2.8051063248829133!3d36.778639372253224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd70431fcc3aa0df%3A0x17040537891c7b8a!2sRepuestos%20Lirola!5e0!3m2!1ses!2ses!4v1698131621622!5m2!1ses!2ses"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
-        </div>
-
-
+          </div>
+        </nav>
+      </div>
     </div>
+
+    <!-- Imagen portada -->
+
+    <div class="row">
+      <div class="col-12 col-xs-12 col-md-12 col-lg-12 col-xl-12  col-xxl-12">
+        <img class="imgPortada" src="img/imgPortada.png">
+      </div>      
+    </div>
+
+    <!-- 1 Row Cream-->
+    <div class="row row-cream">
+      <div class="col-12 col-xs-12 col-md-6 col-lg-7 col-xl-7  col-xxl-7  ">
+        <h2 class="row-tittle">Venta de recambios y accesorios para el automóvil.</h2>
+        <p class="row-description">Somos tienda especializada con varios años de experiencia en el sector,
+          gestionamos más de
+          900.000 referencias en artículos relacionados con la Automoción.</p>
+      </div>
+      <div class="col col-xxl-4">
+        <img src="img/imgcol1.png" class="row-img">
+      </div>
+    </div>
+
+    <!-- 2 Row-->
+    <div class="row row-normal">
+      <div class="col-12 col-xs-12 col-md-6 col-lg-7 col-xl-7 col-xxl-7 ">
+        <h2 class="row-tittle">1ª marcas, garantía en todos nuestros productos.</h2>
+        <p class="row-description">En Repuestos Lirola trabajamos con las mejores y más importantes marcas del
+          sector, lo que nos
+          garantiza contar con calidad, disponibilidad y variedad.</p>
+      </div>
+      <div class="col col-xxl-4 ">
+        <img src="img/imgcol2.png" class="row-img-left">
+      </div>
+    </div>
+
+    <!-- 2 Row Cream-->
+    <div class="row row-cream">
+      <div class="col-12 col-xs-12 col-md-6 col-lg-7 col-xl-7 col-xxl-7 ">
+        <h2 class="row-tittle">Asesoramiento y atención personalizada.</h2>
+        <p class="row-description">Calidad - Servicio - Compromiso </p>
+        <p class="row-description">Garantizar que todos nuestros clientes estén 100% satisfechos.</p>
+      </div>
+      <div class="col col-xxl-4">
+        <img src="img/imgcol3.png" class="row-img">
+      </div>
+    </div>
+
+    <!-- Horario y Map Ejido-->
+    <div class="row row-normal">
+      <div class="col-12 col-xs-12 col-lg-7 col-xl horario">
+        <h2 class="tittle-horario">Instalaciones El Ejido:</h2>
+        <h2 class="tittle-horario">Horario:</h2>
+        <p>Lunes - Viernes:</p>
+        <p>8:30 - 13:30</p>
+        <p>16:00 - 19:00</p>
+        <p>Sábado:</p>
+        <p>9:00 - 12:00</p>
+        <p>Domingo:</p>
+        <p class="cerrado">Cerrado</p>
+      </div>
+      <div id="map-container-google-1" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-5 col-xl-7">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.6634934517724!2d-2.8051063248829133!3d36.778639372253224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd70431fcc3aa0df%3A0x17040537891c7b8a!2sRepuestos%20Lirola!5e0!3m2!1ses!2ses!4v1698131621622!5m2!1ses!2ses"
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      </div>
+    </div>
+    <!-- Horario y Map Roquetas-->
+    <div class="row row-cream">
+      <div class="col-12 col-xs-12 col-lg-7 col-xl horario">
+        <h2 class="tittle-horario">Instalaciones Roquetas De Mar:</h2>
+        <h2 class="tittle-horario">Horario:</h2>
+        <p>Lunes - Viernes:</p>
+        <p>8:30 - 13:30</p>
+        <p>16:00 - 19:00</p>
+        <p>Sábado:</p>
+        <p class="cerrado">Cerrado</p>
+        <p>Domingo:</p>
+        <p class="cerrado">Cerrado</p>
+      </div>
+      <div id="map-container-google-1" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-5 col-xl-7">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.3371449596116!2d-2.6083393236205485!3d36.78646616847273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7070307f1e5cad%3A0x7d3a4fdd8ad876!2sPol.%20Ind.%20La%20Algaida!5e0!3m2!1ses!2ses!4v1698243607313!5m2!1ses!2ses"
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start ">
+          <!-- Section: Social media -->
+          <section class="d-flex justify-content-center justify-content-lg-center p-4 border-bottom">
+            <div class="me-5 d-none d-lg-block">
+              <span>
+                <h4>Encuéntranos en nuestras redes sociales:</h4>
+              </span>
+            </div>
+            <div>
+              <a href="" class="me-4 iconos">
+                <i class="bi bi-envelope"></i>
+              </a>
+              <a href="https://www.facebook.com/repuestoslirola" class="me-4 iconos">
+                <i class="bi bi-facebook"></i>
+              </a>
+              <a href="https://www.instagram.com/repuestoslirolaoficial/" class="me-4 iconos">
+                <i class="bi bi-instagram"></i>
+              </a>
+              <a href="https://api.whatsapp.com/send/?phone=34604421823&text&type=phone_number&app_absent=0"
+                class="me-4 iconos">
+                <i class="bi bi-whatsapp"></i>
+              </a>
+            </div>
+
+          </section>
+          <section class="">
+            <div class="container text-center text-md-start mt-5">
+              <!-- Grid row -->
+              <div class="row mt-3">
+                <!-- Columna Nombre Empresa -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                  <!-- Content -->
+                  <h6 class="text-uppercase fw-bold mb-4">
+                    <i class="fas fa-gem text-secondary"></i>Repuestos Lirola
+                  </h6>
+                  <p>
+                    TODO PARA TU VEHÍCULO
+                    Especialistas en repuestos y accesorios
+                    para el automóvil.
+                  </p>
+                </div>
+
+                <!-- Columna Direccion -->
+                <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mb-md-0 mb-4">
+                  <!-- Links -->
+                  <h6 class="text-uppercase fw-bold mb-4">Dirección</h6>
+                  <p><i class="fas fa-home text-secondary"></i>C/Hispania 16. Polígono Ind. Ciavieja 04700 El ejido
+                    (Almería), Spain</p>
+                  <p><i class="fas fa-home text-secondary"></i>C/Oviedo 26. Polígono Ind. La Algaida,
+                    04740 Roquetas de Mar (Almería), Spain</p>
+
+                </div>
+                <!-- Columna Contacto -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                  <!-- Links -->
+                  <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+                  <p>
+                    <i class="fas fa-envelope text-secondary"></i>
+                    repuestoslirola@gmail.com
+                  </p>
+                  <p><i class="fas fa-phone text-secondary"></i>Teléfono fijo: 950480455</p>
+                  <p><i class="fas fa-print text-secondary"></i>El Ejido: 676130216</p>
+                  <p><i class="fas fa-print text-secondary"></i>Roquetas de Mar: 604421823</p>
+                </div>
+              </div>
+
+            </div>
+          </section>
+
+          <!-- Copyright -->
+          <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+            © 2023 Copyright:
+            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">www.repuestolirola.com</a>
+          </div>
+          <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+      </div>
+    </div>
+
+
+
+  </div>
 
 
 
