Falta validar html

--- a/Repuestos Lirola/index.html
+++ b/Repuestos Lirola/index.html
@@ -71,15 +71,15 @@
 
     <!-- Imagen portada -->
 
-    <div class="row">
+    <div class="row row-portada">
       <div class="col-12 col-xs-12 col-md-12 col-lg-12 col-xl-12  col-xxl-12">
-        <img class="imgPortada" src="img/imgPortada.png">
+        <img class="imgPortada" src="img/imgPortada.png" id="row-portada-center">
       </div>      
     </div>
 
     <!-- 1 Row Cream-->
     <div class="row row-cream">
-      <div class="col-12 col-xs-12 col-md-6 col-lg-7 col-xl-7  col-xxl-7  ">
+      <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-6  col-xxl-4">
         <h2 class="row-tittle">Venta de recambios y accesorios para el automóvil.</h2>
         <p class="row-description">Somos tienda especializada con varios años de experiencia en el sector,
           gestionamos más de
@@ -92,20 +92,20 @@
 
     <!-- 2 Row-->
     <div class="row row-normal">
-      <div class="col-12 col-xs-12 col-md-6 col-lg-7 col-xl-7 col-xxl-7 ">
+      <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-4 ">
         <h2 class="row-tittle">1ª marcas, garantía en todos nuestros productos.</h2>
         <p class="row-description">En Repuestos Lirola trabajamos con las mejores y más importantes marcas del
           sector, lo que nos
           garantiza contar con calidad, disponibilidad y variedad.</p>
       </div>
       <div class="col col-xxl-4 ">
-        <img src="img/imgcol2.png" class="row-img-left">
+        <img src="img/imgcol2.png" class="row-img">
       </div>
     </div>
 
     <!-- 2 Row Cream-->
     <div class="row row-cream">
-      <div class="col-12 col-xs-12 col-md-6 col-lg-7 col-xl-7 col-xxl-7 ">
+      <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-4 ">
         <h2 class="row-tittle">Asesoramiento y atención personalizada.</h2>
         <p class="row-description">Calidad - Servicio - Compromiso </p>
         <p class="row-description">Garantizar que todos nuestros clientes estén 100% satisfechos.</p>
@@ -117,7 +117,7 @@
 
     <!-- Horario y Map Ejido-->
     <div class="row row-normal">
-      <div class="col-12 col-xs-12 col-lg-7 col-xl horario">
+      <div class="col-12 col-xs-12 col-lg-6 col-xl horario">
         <h2 class="tittle-horario">Instalaciones El Ejido:</h2>
         <h2 class="tittle-horario">Horario:</h2>
         <p>Lunes - Viernes:</p>
@@ -128,7 +128,7 @@
         <p>Domingo:</p>
         <p class="cerrado">Cerrado</p>
       </div>
-      <div id="map-container-google-1" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-5 col-xl-7">
+      <div id="map-container-google-1" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-6 col-xl-6">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.6634934517724!2d-2.8051063248829133!3d36.778639372253224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd70431fcc3aa0df%3A0x17040537891c7b8a!2sRepuestos%20Lirola!5e0!3m2!1ses!2ses!4v1698131621622!5m2!1ses!2ses"
           style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -137,7 +137,7 @@
     </div>
     <!-- Horario y Map Roquetas-->
     <div class="row row-cream">
-      <div class="col-12 col-xs-12 col-lg-7 col-xl horario">
+      <div class="col-12 col-xs-12 col-lg-6 col-xl horario">
         <h2 class="tittle-horario">Instalaciones Roquetas De Mar:</h2>
         <h2 class="tittle-horario">Horario:</h2>
         <p>Lunes - Viernes:</p>
@@ -148,7 +148,7 @@
         <p>Domingo:</p>
         <p class="cerrado">Cerrado</p>
       </div>
-      <div id="map-container-google-1" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-5 col-xl-7">
+      <div id="map-container-google-1" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-6 col-xl-6">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.3371449596116!2d-2.6083393236205485!3d36.78646616847273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7070307f1e5cad%3A0x7d3a4fdd8ad876!2sPol.%20Ind.%20La%20Algaida!5e0!3m2!1ses!2ses!4v1698243607313!5m2!1ses!2ses"
           style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
