--- a/Repuestos Lirola/index.html
+++ b/Repuestos Lirola/index.html
@@ -118,8 +118,8 @@
     <!-- Horario y Map Ejido-->
     <div class="row row-normal">
       <div class="col-12 col-xs-12 col-lg-6 col-xl horario">
-        <h2 class="tittle-horario">Instalaciones El Ejido:</h2>
-        <h2 class="tittle-horario">Horario:</h2>
+        <h2>Instalaciones El Ejido:</h2>
+        <h2>Horario:</h2>
         <p>Lunes - Viernes:</p>
         <p>8:30 - 13:30</p>
         <p>16:00 - 19:00</p>
@@ -138,8 +138,8 @@
     <!-- Horario y Map Roquetas-->
     <div class="row row-cream">
       <div class="col-12 col-xs-12 col-lg-6 col-xl horario">
-        <h2 class="tittle-horario">Instalaciones Roquetas De Mar:</h2>
-        <h2 class="tittle-horario">Horario:</h2>
+        <h2>Instalaciones Roquetas De Mar:</h2>
+        <h2>Horario:</h2>
         <p>Lunes - Viernes:</p>
         <p>8:30 - 13:30</p>
         <p>16:00 - 19:00</p>
