--- a/Repuestos Lirola/quienesomos.html
+++ b/Repuestos Lirola/quienesomos.html
@@ -73,7 +73,7 @@
                 <img src="img/quiensomos.png" id="img-quiensomos">
             </div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-12 col-xl-6 col-xxl-5 p-5">
-                <h4 id="acercadenosotros">Acerca de Nosotros</h4>
+                <h4>Acerca de Nosotros</h4>
                 <p>Empresa lider en El Ejido en la venta de recambios, repuestos y accesorios para el automóvil. Somos
                     una empresa familiar del sector de la automoción, dedicada a la comercialización y distribución de
                     repuestos, maquinaria, herramienta y accesorio del automóvil en Almería y provincia.</p>
