--- a/Repuestos Lirola/quienesomos.html
+++ b/Repuestos Lirola/quienesomos.html
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-
+        <!--Row de quién somos-->
         <div class="row" id="bg-quiensomos">
             <div class="col-12">
                 <h1 class="titulo-quiensomos">Quiénes Somos</h1>
@@ -85,6 +85,7 @@
 
             </div>
         </div>
+        <!-- Row miembros de equipo-->
         <div class="row">
             <div class="col-12">
                 <h1 class="titulo-quiensomos">Miembros del equipo</h1>
