--- a/Repuestos Lirola/quienesomos.html
+++ b/Repuestos Lirola/quienesomos.html
@@ -86,24 +86,24 @@
             </div>
         </div>
         <!-- Row miembros de equipo-->
-        <div class="row">
+        <div class="row" id="row-img-left">
             <div class="col-12">
                 <h1 class="titulo-quiensomos">Miembros del equipo</h1>
             </div>
-            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
+            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-2">
                 <img src="img/miembros/juan.png" class="img-equipo" alt="juan">
             </div>
 
-            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
+            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-2">
                 <img src="img/miembros/pepe.png" class="img-equipo" alt="pepe">
             </div>
-            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
+            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-2">
                 <img src="img/miembros/pimo.png" class="img-equipo" alt="pimo">
             </div>
-            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
+            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-2">
                 <img src="img/miembros/miguel.png" class="img-equipo" alt="miguel">
             </div>
-            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
+            <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-2">
                 <img src="img/miembros/dani.png" class="img-equipo" alt="dani">
             </div>
         </div>
